add register company
